# rustMacosDemo

./: .gitignore  Cargo.toml  Makefile  NON_XCODE_SIGNING_GUIDE.md  QUICKSTART.md  README.md  create_dmg.sh  entitlements.plist  install_rust.sh  notarize_app.sh  sign_app.sh  项目更新总结.md
src/: keychain.rs  main.rs
